# QiskitProject

./: Detusch_Grover.ipynb  pyproject.toml
