[tool.poetry]
name = "qiskit project"
version = "0.1.0"
description = ""
authors = ["Federico Santona <federico@example.com>", "Alberto Pancaldi <alberto@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^1.3.1"
qiskit-aer = "^0.16.0"
qiskit-ibm-runtime = "^0.34.0"
notebook = "^7.3.2"
matplotlib = "^3.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
